--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,11 +26,13 @@
 </head>
 
 <body>
+  <%= render 'layouts/navigation' %>
   <!-- Main Content -->
   <div class="container">
     <div class="row">
       <%= yield %>
     <div>
   <div>
+  <%= render 'layouts/footer' %>
 </body>
 </html>
