--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,14 +1,33 @@
 <p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
-
-<p>
-  <strong>Body:</strong>
-  <%= @post.body %>
-</p>
-
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
+
+<header class="intro-header" style="background-image: url('../img/post-bg.jpg')">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <div class="post-heading">
+                        <h1><%= @post.title %></h1>
+                        <h2 class="subheading"><%= @post.body %></h2>
+                        <span class="meta">Posted by <a href="#">Admin</a> on <%= @post.created_at%></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+<!-- Post Content -->
+    <article>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <h2><%= @post.title %></h2>
+                    <p><%= @post.body %></p>
+                    <h2><%= @post.title %></h2>
+                    <p><%= @post.body %></p>
+                    <h2><%= @post.title %></h2>
+                    <p><%= @post.body %></p>
+                </div>
+            </div>
+        </div>
+    </article>
